<resources>
    <string name="app_name">Shareo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_profile_info">ProfileInfoActivity</string>
    <string name="title_activity_my_owned_things">MyOwnedThingsActivity</string>
    <string name="title_activity_my_borrowed_things">MyBorrowedThingsActivity</string>
    <string name="title_activity_add_game">AddGameActivity</string>
    <string name="title_activity_edit_game">EditGameActivity</string>
    <string name="title_activity_game_information">GameInformationActivity</string>
    <string name="title_activity_my_bids">MyBidsActivity</string>
    <string name="title_activity_selling_bids">SellingBidsActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="buttonSignup">Signup</string>
    <string name="buttonLogin">Login</string>
    <string name="hintFullName">name</string>
    <string name="hintEmail">email@provider.com</string>
    <string name="hintUserName">username</string>
    <string name="hintMotto">Favourite motto/expression</string>
    <string name="textViewOr">Or</string>
    <string name="textViewFullName">Full Name</string>
    <string name="textViewUserName">Username</string>
    <string name="textViewEmail">Email Address</string>
    <string name="textViewMotto">Motto</string>
    <string name="textViewGameName">Name</string>
    <string name="hintGameName">Game name</string>
    <string name="textViewDescription">Description</string>
    <string name="hintDescription">Game Description</string>
    <string name="textViewRate">Rate</string>
    <string name="hintRate">Hourly borrowing rate</string>
    <string name="textViewCategory">Category</string>
    <string name="hintCategory">Game category</string>
    <string name="textViewNumberPlayers">Number of Players</string>
    <string name="hintNumberPlayers"># Game Players</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonSave">Save</string>
    <string name="buttonSaveEdits">Save Edits</string>
    <string name="buttonMiddle">Cancel</string>
    <string name="textViewAddGame">Add a Game</string>
    <string name="textViewLogin">Shareo Account Setup</string>
    <string name="hintSearch">Search for a game</string>
    <string name="textViewSearchGame">Game Search</string>
    <string name="textViewCreateProfile">Create User Profile</string>
</resources>
