<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cmput301w16t15.shareo.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/textViewFullName"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginTop="20dp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/hintFullName"
                android:layout_marginTop="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewUserName"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginTop="20dp" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/hintUserName"
                android:layout_marginTop="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewEmail"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginTop="20dp" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/hintEmail"
                android:layout_marginTop="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewMotto"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginTop="20dp" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/hintMotto"
                android:layout_marginTop="20dp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
